# pydm-converter-tool

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  cvs_log.txt  environment.yml  index.html  launch_gui.sh  main.py  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/workflows/: gh-pages.yml  lint.yml  pypi_release.yml  tests.yml
app/parsers/: edl_parser.py
app/src/: env.sh  launch_gui.sh
app/src/model/: app_model.py  options_model.py
app/src/view/: file_select_widget.py  main_window.py  main_window.ui  options_window.py  options_window.ui  output_select_dialog.py
arguments/: index.html
docs/: arguments.md  index.md  installation.md  user_guide.md
docs/reference/: custom_types.md  index.md  widgets.md  widgets_helpers.md
docs/reference/edm/: converter.md  converter_helpers.md  menumux.md  parser.md  parser_helpers.md
examples/: TEM_mapping.edl  all_bsy0_main.edl  all_bsy0_main_with_groups.edl  prosilica.edl
pydmconverter/: __main__.py  custom_types.py  dataclasses.py  edm_parser.py  exceptions.py  launch_gui.sh  main.py  org_template.py  react.py  types.py  widgets.py  widgets_helpers.py
pydmconverter/edm/: converter.py  converter_helpers.py  edm_qt.py  ir_adapter.py  main.py  menumux.py  parser.py  parser_helpers.py
pydmconverter/ir/: __init__.py  base.py  builder.py  emit.py  fox.py  ids.py  macros.py  model.py  registry.py  schema.py  source.py  transforms.py
pydmconverter/ir/data/: VENDORED_SCHEMA.md  screen-ir.schema.json
pydmconverter/sites/: __init__.py  slac.py
pydmconverter/ui/: __init__.py  ir_adapter.py
reference/: index.html
reference/custom_types/: index.html
reference/edm/converter/: index.html
reference/edm/converter_helpers/: index.html
reference/edm/menumux/: index.html
reference/edm/parser/: index.html
reference/edm/parser_helpers/: index.html
reference/pydm-converter-tool/: index.html
reference/widgets/: index.html
reference/widgets_helpers/: index.html
search/: search_index.json
src/: main.py  org_template.py  widgets.py
src/edm/: parser_helpers.py
src/parsers/edm/: edm_parser.py
tests/: test_converter.py  test_dataclasses.py  test_headless_import.py  test_main.py  test_options_model.py  test_org_template.py  test_parser_helpers.py  test_react.py  test_sites.py  test_ui_rules.py  test_widgets.py  test_widgets_helpers.py
tests/edm/: test_batch2_widget_fixes.py  test_byte_and_related.py  test_calc_rules_and_locals.py  test_channel_attrs_and_alarm_rules.py  test_colors.py  test_control_widgets.py  test_converter.py  test_converter_helpers.py  test_fidelity_edm_batch.py  test_graphics_widgets.py  test_integration_combined.py  test_ir_adapter.py  test_p1_widgets.py  test_parser.py  test_parser_helpers.py  test_phase2_widgets.py  test_pip_and_macro_declarations.py  test_symbol_states.py  test_visibility_rules.py
tests/edm/fixtures/: basic_widgets.edl  calc.list  calc_rules.edl  colors.edl  colors.list  combined_phase12.edl  combined_phase12.screen.json  exit_button.edl  graphics_arc.edl  graphics_bars.edl  graphics_circle.edl  graphics_group.edl  graphics_line.edl  graphics_rect.edl  indicator.edl  integration_combined.screen.json  meter.edl  misc_buttons.edl  mmv_multiline.edl  p0_min.edl  (+10 more)
tests/ir/: conftest.py  test_ir_builder.py  test_ir_emit.py  test_ir_fox.py  test_ir_ids.py  test_ir_model.py  test_ir_registry.py  test_ir_schema.py  test_ir_transforms.py
tests/ui/: test_byte_and_related.py  test_ir_adapter.py  test_p1_widgets.py  test_template_repeater.py  test_unmapped_classes.py
user_guide/: index.html
(+37 files in other folders)
